@@ -146,6 +146,7 @@ features:
 - digraph structure added to misc.c and pub_misc.h that can be used to handle directed graphs, compute undirected
   components in the graph, and sort these components (almost) topologically
 - beta-version of a MATLAB interface can be found under interfaces/matlab
+- SCIP does now print an info message when the root LP could not be solved or is unbounded
 
 SCIP version 2.1.2
 ==================
